cabal-version:      3.0
name:               cardano-ledger-core
version:            1.12.0.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
bug-reports:        https://github.com/intersectmbo/cardano-ledger/issues
synopsis:
    Core components of Cardano ledgers from the Shelley release on.

description:
    Cardano ledgers from the Shelley release onwards share a core basis rooted in
    the Shelley ledger specification. This package abstracts a number of components
    which we expect to be shared amongst all future ledgers implemented around this base.

extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/intersectmbo/cardano-ledger
    subdir:   libs/cardano-ledger-core

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:
        Cardano.Ledger.Address
        Cardano.Ledger.Ap
        Cardano.Ledger.AuxiliaryData
        Cardano.Ledger.BaseTypes
        Cardano.Ledger.BHeaderView
        Cardano.Ledger.Block
        Cardano.Ledger.Coin
        Cardano.Ledger.Compactible
        Cardano.Ledger.Core
        Cardano.Ledger.Credential
        Cardano.Ledger.Crypto
        Cardano.Ledger.CertState
        Cardano.Ledger.DRep
        Cardano.Ledger.EpochBoundary
        Cardano.Ledger.Era
        Cardano.Ledger.Hashes
        Cardano.Ledger.HKD
        Cardano.Ledger.Keys
        Cardano.Ledger.Keys.Bootstrap
        Cardano.Ledger.Keys.WitVKey
        Cardano.Ledger.Language
        Cardano.Ledger.MemoBytes
        Cardano.Ledger.Metadata
        Cardano.Ledger.Orphans
        Cardano.Ledger.PoolDistr
        Cardano.Ledger.PoolParams
        Cardano.Ledger.Plutus
        Cardano.Ledger.Plutus.CostModels
        Cardano.Ledger.Plutus.Data
        Cardano.Ledger.Plutus.ExUnits
        Cardano.Ledger.Plutus.Language
        Cardano.Ledger.Plutus.TxInfo
        Cardano.Ledger.Plutus.Evaluate
        Cardano.Ledger.Plutus.ToPlutusData
        Cardano.Ledger.Rewards
        Cardano.Ledger.Rules.ValidationMode
        Cardano.Ledger.SafeHash
        Cardano.Ledger.Serialization
        Cardano.Ledger.Slot
        Cardano.Ledger.Tools
        Cardano.Ledger.TxIn
        Cardano.Ledger.UTxO
        Cardano.Ledger.Val
        Cardano.Ledger.UMap

    hs-source-dirs:   src
    other-modules:
        Cardano.Ledger.Core.Era
        Cardano.Ledger.Keys.Internal
        Cardano.Ledger.Core.PParams
        Cardano.Ledger.Core.Translation
        Cardano.Ledger.Core.TxCert

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base >=4.14 && <5,
        aeson >=2,
        base16-bytestring,
        base64-bytestring,
        base-deriving-via,
        binary,
        bytestring,
        cardano-ledger-binary ^>=1.3,
        cardano-crypto,
        cardano-crypto-class,
        cardano-crypto-praos,
        cardano-crypto-wrapper,
        cardano-data ^>=1.2,
        cardano-ledger-byron,
        cardano-prelude,
        cardano-slotting,
        containers,
        data-default-class,
        deepseq,
        FailT,
        groups,
        heapwords,
        iproute,
        mtl,
        measures,
        microlens,
        network,
        nothunks,
        partial-order,
        plutus-ledger-api,
        prettyprinter,
        random,
        quiet,
        serialise,
        scientific,
        set-algebra,
        non-integral >=1.0,
        primitive,
        small-steps >=1.1,
        cardano-strict-containers,
        text,
        time,
        transformers,
        utf8-string,
        validation-selective,
        vector-map ^>=1.1

    if flag(asserts)
        ghc-options: -fno-ignore-asserts

    if !impl(ghc >=9.2)
        ghc-options: -Wno-name-shadowing

library testlib
    exposed-modules:
        Test.Cardano.Ledger.Common
        Test.Cardano.Ledger.Core.Address
        Test.Cardano.Ledger.Core.Arbitrary
        Test.Cardano.Ledger.Core.Binary
        Test.Cardano.Ledger.Core.Binary.RoundTrip
        Test.Cardano.Ledger.Core.JSON
        Test.Cardano.Ledger.Core.KeyPair
        Test.Cardano.Ledger.Core.Utils
        Test.Cardano.Ledger.Core.Rational
        Test.Cardano.Ledger.Core.Tools
        Test.Cardano.Ledger.Imp.Common
        Test.Cardano.Ledger.Plutus
        Test.Cardano.Ledger.Plutus.Examples
        Test.Cardano.Ledger.TreeDiff
        Test.Cardano.Ledger.Plutus.ToPlutusData
        Test.Cardano.Ledger.Plutus.ScriptTestContext

    visibility:       public
    hs-source-dirs:   testlib
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        aeson,
        aeson-pretty,
        base,
        binary,
        bytestring,
        cardano-crypto-class,
        cardano-crypto-test,
        cardano-crypto-wrapper,
        cardano-ledger-core,
        cardano-ledger-binary:{cardano-ledger-binary, testlib} ^>=1.3,
        cardano-ledger-byron,
        cardano-ledger-byron-test,
        containers,
        data-default-class,
        deepseq,
        FailT,
        generic-random,
        genvalidity,
        hspec,
        hedgehog-quickcheck,
        HUnit,
        mtl,
        nothunks,
        primitive,
        QuickCheck,
        quickcheck-transformer,
        plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib},
        random >=1.2,
        text,
        tree-diff,
        vector-map:{vector-map, testlib},
        time,
        cardano-slotting,
        unliftio,
        small-steps >=1.1,
        quickcheck-instances

    if !impl(ghc >=9.2)
        ghc-options: -Wno-name-shadowing

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Cardano.Ledger.AddressSpec
        Test.Cardano.Ledger.BaseTypesSpec
        Test.Cardano.Ledger.BinarySpec
        Test.Cardano.Ledger.JsonSpec
        Test.Cardano.Ledger.PlutusSpec
        Test.Cardano.Ledger.UMapSpec

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base,
        aeson,
        base16-bytestring,
        binary,
        bytestring,
        cardano-ledger-binary:{cardano-ledger-binary, testlib},
        cardano-ledger-byron,
        cardano-ledger-core,
        cardano-crypto-class,
        containers,
        FailT,
        testlib,
        genvalidity,
        genvalidity-scientific,
        scientific

benchmark umap
    type:             exitcode-stdio-1.0
    main-is:          UMap.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
        -threaded -rtsopts -O2

    build-depends:
        base,
        cardano-ledger-core,
        testlib,
        containers,
        criterion,
        QuickCheck

benchmark addr
    type:             exitcode-stdio-1.0
    main-is:          Addr.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
        -threaded -rtsopts -O2

    build-depends:
        base,
        bytestring,
        cardano-ledger-core,
        testlib,
        criterion,
        QuickCheck
