cabal-version: 3.0
name: cardano-ledger-core
version: 1.16.0.0
license: Apache-2.0
maintainer: operations@iohk.io
author: IOHK
bug-reports: https://github.com/intersectmbo/cardano-ledger/issues
synopsis:
  Core components of Cardano ledgers from the Shelley release on.

description:
  Cardano ledgers from the Shelley release onwards share a core basis rooted in
  the Shelley ledger specification. This package abstracts a number of components
  which we expect to be shared amongst all future ledgers implemented around this base.

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-ledger
  subdir: libs/cardano-ledger-core

flag asserts
  description: Enable assertions
  default: False

library
  exposed-modules:
    Cardano.Ledger.Address
    Cardano.Ledger.AuxiliaryData
    Cardano.Ledger.BHeaderView
    Cardano.Ledger.BaseTypes
    Cardano.Ledger.Block
    Cardano.Ledger.CertState
    Cardano.Ledger.Coin
    Cardano.Ledger.Compactible
    Cardano.Ledger.Core
    Cardano.Ledger.Credential
    Cardano.Ledger.Crypto
    Cardano.Ledger.DRep
    Cardano.Ledger.EpochBoundary
    Cardano.Ledger.Genesis
    Cardano.Ledger.HKD
    Cardano.Ledger.Hashes
    Cardano.Ledger.Keys
    Cardano.Ledger.Keys.Bootstrap
    Cardano.Ledger.Keys.WitVKey
    Cardano.Ledger.MemoBytes
    Cardano.Ledger.MemoBytes.Internal
    Cardano.Ledger.Metadata
    Cardano.Ledger.Orphans
    Cardano.Ledger.Plutus
    Cardano.Ledger.Plutus.CostModels
    Cardano.Ledger.Plutus.Data
    Cardano.Ledger.Plutus.Evaluate
    Cardano.Ledger.Plutus.ExUnits
    Cardano.Ledger.Plutus.Language
    Cardano.Ledger.Plutus.ToPlutusData
    Cardano.Ledger.Plutus.TxInfo
    Cardano.Ledger.PoolDistr
    Cardano.Ledger.PoolParams
    Cardano.Ledger.Rewards
    Cardano.Ledger.Rules.ValidationMode
    Cardano.Ledger.SafeHash
    Cardano.Ledger.Slot
    Cardano.Ledger.Tools
    Cardano.Ledger.TxIn
    Cardano.Ledger.UMap
    Cardano.Ledger.UTxO
    Cardano.Ledger.Val

  hs-source-dirs: src
  other-modules:
    Cardano.Ledger.Core.Era
    Cardano.Ledger.Core.PParams
    Cardano.Ledger.Core.Translation
    Cardano.Ledger.Core.TxCert
    Cardano.Ledger.Keys.Internal

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages

  build-depends:
    FailT,
    aeson >=2,
    base >=4.14 && <5,
    base-deriving-via,
    base16-bytestring,
    base64-bytestring,
    binary,
    bytestring,
    cardano-crypto,
    cardano-crypto-class,
    cardano-crypto-praos,
    cardano-crypto-wrapper,
    cardano-data ^>=1.2,
    cardano-ledger-binary ^>=1.5,
    cardano-ledger-byron,
    cardano-prelude,
    cardano-slotting,
    cardano-strict-containers,
    containers,
    data-default >=0.8,
    deepseq,
    groups,
    heapwords,
    iproute,
    measures,
    microlens,
    mtl,
    non-integral >=1.0,
    nothunks >=0.1.5 && <0.3,
    partial-order,
    plutus-core,
    plutus-ledger-api,
    prettyprinter,
    primitive,
    quiet,
    random,
    scientific,
    serialise,
    small-steps >=1.1,
    text,
    time,
    transformers,
    utf8-string,
    validation-selective,
    vector-map ^>=1.1,

  if flag(asserts)
    ghc-options: -fno-ignore-asserts

  if !impl(ghc >=9.2)
    ghc-options: -Wno-name-shadowing

library testlib
  exposed-modules:
    Test.Cardano.Ledger.Common
    Test.Cardano.Ledger.Core.Address
    Test.Cardano.Ledger.Core.Arbitrary
    Test.Cardano.Ledger.Core.Binary
    Test.Cardano.Ledger.Core.Binary.CDDL
    Test.Cardano.Ledger.Core.Binary.RoundTrip
    Test.Cardano.Ledger.Core.JSON
    Test.Cardano.Ledger.Core.KeyPair
    Test.Cardano.Ledger.Core.Rational
    Test.Cardano.Ledger.Core.Utils
    Test.Cardano.Ledger.Imp.Common
    Test.Cardano.Ledger.Plutus
    Test.Cardano.Ledger.Plutus.Examples
    Test.Cardano.Ledger.Plutus.Guardrail
    Test.Cardano.Ledger.Plutus.ScriptTestContext
    Test.Cardano.Ledger.Plutus.ToPlutusData
    Test.Cardano.Ledger.TreeDiff

  visibility: public
  hs-source-dirs: testlib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages

  build-depends:
    FailT,
    ImpSpec,
    QuickCheck,
    aeson,
    aeson-pretty,
    base,
    base16-bytestring,
    binary,
    bytestring,
    cardano-crypto-class,
    cardano-crypto-test,
    cardano-crypto-wrapper,
    cardano-ledger-binary:{cardano-ledger-binary, testlib} >=1.5,
    cardano-ledger-byron,
    cardano-ledger-byron-test,
    cardano-ledger-core,
    cardano-slotting,
    containers,
    cuddle,
    data-default,
    deepseq,
    generic-random,
    genvalidity,
    hedgehog-quickcheck,
    heredoc,
    hspec,
    mtl,
    nothunks,
    plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib},
    prettyprinter,
    primitive,
    quickcheck-transformer,
    random >=1.2,
    small-steps >=1.1,
    text,
    time,
    tree-diff,
    unliftio,
    vector-map:{vector-map, testlib},

  if !impl(ghc >=9.2)
    ghc-options: -Wno-name-shadowing

executable plutus-debug
  main-is: PlutusDebug.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <5,
    cardano-ledger-core,

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.Cardano.Ledger.AddressSpec
    Test.Cardano.Ledger.BaseTypesSpec
    Test.Cardano.Ledger.BinarySpec
    Test.Cardano.Ledger.JsonSpec
    Test.Cardano.Ledger.PlutusSpec
    Test.Cardano.Ledger.ToolsSpec
    Test.Cardano.Ledger.UMapSpec

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    FailT,
    aeson,
    base,
    base16-bytestring,
    binary,
    bytestring,
    cardano-crypto-class,
    cardano-ledger-binary:{cardano-ledger-binary, testlib},
    cardano-ledger-byron,
    cardano-ledger-core,
    containers,
    genvalidity,
    genvalidity-scientific,
    quickcheck-instances,
    scientific,
    testlib,

benchmark umap
  type: exitcode-stdio-1.0
  main-is: UMap.hs
  hs-source-dirs: bench
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wunused-packages
    -threaded
    -rtsopts
    -O2

  build-depends:
    QuickCheck,
    base,
    cardano-ledger-core,
    containers,
    criterion,
    testlib,

benchmark addr
  type: exitcode-stdio-1.0
  main-is: Addr.hs
  hs-source-dirs: bench
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wunused-packages
    -threaded
    -rtsopts
    -O2

  build-depends:
    QuickCheck,
    base,
    bytestring,
    cardano-ledger-core,
    criterion,
    testlib,
