cabal-version: 3.0
name: cardano-ledger-core
version: 1.19.0.0
license: Apache-2.0
maintainer: operations@iohk.io
author: IOHK
bug-reports: https://github.com/intersectmbo/cardano-ledger/issues
synopsis:
  Core components of Cardano ledgers from the Shelley release on.

description:
  Cardano ledgers from the Shelley release onwards share a core basis rooted in
  the Shelley ledger specification. This package abstracts a number of components
  which we expect to be shared amongst all future ledgers implemented around this base.

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-ledger
  subdir: libs/cardano-ledger-core

flag asserts
  description: Enable assertions
  default: False

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: warnings
  exposed-modules:
    Cardano.Ledger.Address
    Cardano.Ledger.BHeaderView
    Cardano.Ledger.BaseTypes
    Cardano.Ledger.BaseTypes.NonZero
    Cardano.Ledger.Block
    Cardano.Ledger.Coin
    Cardano.Ledger.Compactible
    Cardano.Ledger.Core
    Cardano.Ledger.Credential
    Cardano.Ledger.DRep
    Cardano.Ledger.Genesis
    Cardano.Ledger.HKD
    Cardano.Ledger.Hashes
    Cardano.Ledger.Keys
    Cardano.Ledger.Keys.Bootstrap
    Cardano.Ledger.Keys.WitVKey
    Cardano.Ledger.MemoBytes
    Cardano.Ledger.MemoBytes.Internal
    Cardano.Ledger.Metadata
    Cardano.Ledger.Orphans
    Cardano.Ledger.Plutus
    Cardano.Ledger.Plutus.CostModels
    Cardano.Ledger.Plutus.Data
    Cardano.Ledger.Plutus.Evaluate
    Cardano.Ledger.Plutus.ExUnits
    Cardano.Ledger.Plutus.Language
    Cardano.Ledger.Plutus.ToPlutusData
    Cardano.Ledger.Plutus.TxInfo
    Cardano.Ledger.Rewards
    Cardano.Ledger.Rules.ValidationMode
    Cardano.Ledger.Slot
    Cardano.Ledger.State
    Cardano.Ledger.Tools
    Cardano.Ledger.TxIn
    Cardano.Ledger.Val

  hs-source-dirs: src
  other-modules:
    Cardano.Ledger.Core.Era
    Cardano.Ledger.Core.PParams
    Cardano.Ledger.Core.Translation
    Cardano.Ledger.Core.TxCert
    Cardano.Ledger.Core.TxLevel
    Cardano.Ledger.Keys.Internal
    Cardano.Ledger.State.Account
    Cardano.Ledger.State.CertState
    Cardano.Ledger.State.ChainAccount
    Cardano.Ledger.State.Governance
    Cardano.Ledger.State.PoolDistr
    Cardano.Ledger.State.SnapShots
    Cardano.Ledger.State.Stake
    Cardano.Ledger.State.StakePool
    Cardano.Ledger.State.UTxO

  default-language: Haskell2010
  build-depends:
    FailT,
    aeson >=2,
    base >=4.18 && <5,
    base-deriving-via,
    base16-bytestring,
    base64-bytestring,
    binary,
    bytestring >=0.10 && <0.11.3 || >=0.11.4,
    cardano-base >=0.1.1.0,
    cardano-crypto,
    cardano-crypto-class ^>=2.2,
    cardano-crypto-wrapper,
    cardano-data >=1.3,
    cardano-ledger-binary ^>=1.8,
    cardano-ledger-byron,
    cardano-ledger-core:internal,
    cardano-slotting,
    cardano-strict-containers,
    containers,
    data-default >=0.8,
    deepseq,
    groups,
    iproute,
    measures,
    mempack >=0.2,
    microlens,
    mtl,
    non-integral >=1.0,
    nothunks >=0.1.5 && <0.4,
    partial-order,
    plutus-core,
    plutus-ledger-api,
    prettyprinter,
    primitive,
    quiet,
    random,
    scientific,
    serialise,
    small-steps >=1.1,
    text,
    time,
    transformers,
    utf8-string,
    validation-selective,
    vector-map >=1.1,

  if flag(asserts)
    ghc-options: -fno-ignore-asserts

library internal
  import: warnings
  build-depends:
    base,
    cardano-ledger-binary,

  exposed-modules:
    Cardano.Ledger.Internal.Era

  other-modules:
    Cardano.Ledger.Internal.Definition.Era

  visibility: public
  hs-source-dirs: internal
  default-language: Haskell2010

library cddl
  import: warnings
  exposed-modules:
    Cardano.Ledger.Core.HuddleSpec
    Cardano.Ledger.Huddle

  visibility: public
  hs-source-dirs: cddl
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages

  build-depends:
    base,
    cardano-ledger-core,
    cuddle >=0.4,
    heredoc,
    text,

library testlib
  import: warnings
  exposed-modules:
    Test.Cardano.Ledger.Common
    Test.Cardano.Ledger.Core.Address
    Test.Cardano.Ledger.Core.Arbitrary
    Test.Cardano.Ledger.Core.Binary
    Test.Cardano.Ledger.Core.Binary.Annotator
    Test.Cardano.Ledger.Core.Binary.CDDL
    Test.Cardano.Ledger.Core.Binary.Golden
    Test.Cardano.Ledger.Core.Binary.RoundTrip
    Test.Cardano.Ledger.Core.JSON
    Test.Cardano.Ledger.Core.KeyPair
    Test.Cardano.Ledger.Core.Rational
    Test.Cardano.Ledger.Core.Utils
    Test.Cardano.Ledger.Era
    Test.Cardano.Ledger.Imp.Common
    Test.Cardano.Ledger.Plutus
    Test.Cardano.Ledger.Plutus.Examples
    Test.Cardano.Ledger.Plutus.Guardrail
    Test.Cardano.Ledger.Plutus.ScriptTestContext
    Test.Cardano.Ledger.Plutus.ToPlutusData
    Test.Cardano.Ledger.TreeDiff

  visibility: public
  hs-source-dirs: testlib
  default-language: Haskell2010
  build-depends:
    FailT,
    ImpSpec,
    QuickCheck,
    aeson,
    aeson-pretty,
    base,
    base16-bytestring,
    binary,
    bytestring,
    cardano-crypto-class,
    cardano-crypto-wrapper:{cardano-crypto-wrapper, testlib},
    cardano-ledger-binary:{cardano-ledger-binary, testlib} >=1.5,
    cardano-ledger-byron:{cardano-ledger-byron, testlib},
    cardano-ledger-core,
    cardano-slotting,
    containers,
    cuddle >=0.4,
    deepseq,
    generic-random,
    genvalidity,
    hedgehog-quickcheck,
    heredoc,
    hspec,
    microlens,
    mtl,
    nothunks,
    plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib},
    primitive,
    quickcheck-transformer,
    random >=1.2,
    small-steps >=1.1,
    text,
    time,
    tree-diff,
    unliftio,
    vector-map:{vector-map, testlib},

library tasty-compat
  import: warnings
  visibility: public
  default-language: Haskell2010
  hs-source-dirs: tasty-compat
  exposed-modules:
    Test.Tasty
    Test.Tasty.HUnit
    Test.Tasty.QuickCheck

  build-depends:
    HUnit,
    QuickCheck,
    base,
    hspec,

executable plutus-debug
  import: warnings, rtsopts
  main-is: PlutusDebug.hs
  hs-source-dirs: app
  other-modules:
    CLI

  default-language: Haskell2010
  build-depends:
    base >=4.18 && <5,
    cardano-ledger-binary,
    cardano-ledger-core,
    optparse-applicative,

test-suite tests
  import: warnings, rtsopts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.Cardano.Ledger.AddressSpec
    Test.Cardano.Ledger.BaseTypesSpec
    Test.Cardano.Ledger.BinarySpec
    Test.Cardano.Ledger.JsonSpec
    Test.Cardano.Ledger.PlutusSpec
    Test.Cardano.Ledger.State.StakePoolSpec
    Test.Cardano.Ledger.ToolsSpec

  default-language: Haskell2010
  build-depends:
    FailT,
    aeson,
    base,
    base16-bytestring,
    binary,
    bytestring,
    cardano-crypto-class,
    cardano-ledger-binary:{cardano-ledger-binary, testlib},
    cardano-ledger-byron,
    cardano-ledger-core,
    containers,
    genvalidity,
    genvalidity-scientific,
    plutus-ledger-api,
    quickcheck-instances,
    scientific,
    testlib,

benchmark addr
  import: warnings, rtsopts
  type: exitcode-stdio-1.0
  main-is: Addr.hs
  hs-source-dirs: bench
  default-language: Haskell2010
  build-depends:
    QuickCheck,
    base,
    bytestring,
    cardano-ledger-core,
    criterion,
    testlib,
